# vibe-brew

./: .gitignore  CLAUDE.md  LICENSE  PROMPT.md  README.md  README_CN.md  WaitDex.md  pyproject.toml
docs/: DESIGN.md  PRD.md  ROADMAP.md  architecture.md
src/: WaitDex_en.md  advisor.py  content_reader.py  i18n.py  session_discoverer.py  state_detector.py  terminal_renamer.py  vibe_brew.py
